chore(frontend): update tsconfig and .gitignore formatting
- Comment out lib and lib64 directories in .gitignore
- Add exception for frontend/src/lib/ in .gitignore
- Format "lib" array in tsconfig.json for readability
- Add "baseUrl" setting to tsconfig.json compilerOptions
- Format "paths" entries in tsconfig.json for clarity
- Reformat include and exclude arrays in tsconfig.json for consistency

--- a/.gitignore
+++ b/.gitignore
@@ -15,8 +15,8 @@ dist/
 downloads/
 eggs/
 .eggs/
-lib/
-lib64/
+# lib/
+# lib64/
 parts/
 sdist/
 var/
@@ -95,3 +95,4 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+!frontend/src/lib/
