--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,14 +21,14 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
-    "framer-motion": "^12.23.25",
+    "framer-motion": "^12.33.0",
     "gray-matter": "^4.0.3",
     "gsap": "^3.14.2",
     "lucide-react": "^0.555.0",
-    "next": "16.0.4",
+    "next": "^16.1.6",
     "next-themes": "^0.4.6",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
+    "react": "^19.2.4",
+    "react-dom": "^19.2.4",
     "react-icons": "^5.5.0",
     "rehype-raw": "^7.0.0",
     "remark": "^15.0.1",
@@ -42,11 +42,11 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "^19.2.13",
+    "@types/react-dom": "^19.2.3",
     "baseline-browser-mapping": "^2.8.32",
     "eslint": "^9",
-    "eslint-config-next": "16.0.4",
+    "eslint-config-next": "^16.1.6",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
